# euclid_system_monitor

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
launch/: monitor.launch
msg/: CpuStatus.msg  HardwareStatus.msg  USBStatus.msg  WifiStatus.msg
scripts/: CpuDeviceInfo.py  device_monitor.py  nodes_monitor.py
